--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "ethers": "^6.9.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
