--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
+    "@zoralabs/nft-hooks": "^1.2.1",
     "ethers": "^6.9.0",
+    "graphql": "^16.8.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
